--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,18 @@ html {
   font-family: Roboto, sans-serif;
 }
 
+.skip-links {
+  position: absolute;
+  top: -3em;
+}
+
 .section-dark {
   background-color: #000308;
   color: #fff;
+}
+
+.section-dark a:focus {
+  outline: 2px solid white;
 }
 
 .section-light {
