Add roles to elements

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ html {
   color: #222;
 }
 
+.section-light a:focus {
+  outline: 2px solid red;
+}
+
 .section-bg {
   background-size: cover;
 }
